docs: 添加数据来源年份标注

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <span class="stat-label">GDP(元)</span>
                 </div>
             </div>
+            <p class="data-source">数据来源：国家统计局 2022年度数据</p>
         </footer>
     </div>
 
